--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,14 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
+# Résoudre react_native_pods.rb avec node pour permettre le hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
+    {paths: [process.argv[1]]},
+  )', __dir__]).strip
+
+# Inclure le script de configuration de react-native-permissions
+require Pod::Executable.execute_command('node', ['-p',
+  'require.resolve(
+    "react-native-permissions/scripts/setup.rb",
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
@@ -10,7 +17,7 @@ prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+  Pod::UI.puts "Configuration du Pod avec des Frameworks liés #{linkage}".green
   use_frameworks! :linkage => linkage.to_sym
 end
 
@@ -19,9 +26,15 @@ target 'stockPilot' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
+    # Un chemin absolu vers la racine de votre application.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  # Configurer les permissions requises
+  setup_permissions([
+    'Camera',
+    # Ajoutez d'autres permissions si nécessaire
+  ])
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
