--- a/package.json
+++ b/package.json
@@ -13,23 +13,31 @@
     "@gorhom/bottom-sheet": "^5.1.1",
     "@hookform/resolvers": "^4.0.0",
     "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@tanstack/query-async-storage-persister": "^5.66.4",
+    "@tanstack/react-query": "^5.66.8",
+    "@tanstack/react-query-persist-client": "^5.66.8",
     "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.77.0",
     "react-native-camera": "^4.2.1",
     "react-native-css-interop": "^0.1.22",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "^2.23.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^5.2.5",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.6.0",
+    "react-native-screens": "^4.8.0",
     "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
@@ -48,6 +56,7 @@
     "@react-native/typescript-config": "0.77.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
